tests/success/loop_add.crema
int sum = 0
int l[] = [1, 2, 3, 4, 5]
foreach(l as elem) {
  sum = sum + elem
}
