tests/fail/loop_non_list.crema
int a = 1
int sum = 0
foreach (a as b) {
  sum = sum + b
}
